--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
-/dist
+# dependencies
 /node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
 
-.env
+# testing
+/coverage
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
